Update angular core

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -41,7 +41,7 @@
       >
         <mat-icon
           [fontIcon]="Icons.Close" [ngClass]="focused ? 'visible opacity-100' : 'invisible opacity-0'"
-          class="absolute transition-all duration-300"
+          class="!absolute transition-all duration-300"
         ></mat-icon>
         <mat-icon
           [fontIcon]="Icons.Menu" [ngClass]="focused ? 'invisible opacity-0' : 'visible opacity-100'"
