--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,12 +5,12 @@
       i18n="@@footer_author" target="_blank"
     >Made by kurovale 2024.</a>
     <a
-      class="mt-4 hover:cursor-pointer hover:underline md:mt-0"
+      class="mt-4 hover:cursor-pointer hover:underline"
       href="https://github.com/kuro-vale/shiro-questions/blob/main/LICENSE"
       i18n="@@footer_license" target="_blank"
     >Code licensed under an MIT-style License.</a>
     <a
-      class="mt-4 hover:cursor-pointer hover:underline md:mt-0" href="https://x.com/_Silvervale_"
+      class="mt-4 hover:cursor-pointer hover:underline" href="https://x.com/_Silvervale_"
       i18n="@@footer_silvervale" target="_blank"
     >Follow Silvervale. 💙🩷</a>
   </div>
