--- a/src/app/components/user/profile/profile-questions/profile-questions.component.html
+++ b/src/app/components/user/profile/profile-questions/profile-questions.component.html
@@ -1,22 +1,3 @@
-<div class="flex items-center flex-col mt-10">
-  @defer () {
-    @if (questions$ | async; as questions) {
-      @for (question of questions.items; track question.id) {
-        <app-question-card [question]="question"></app-question-card>
-      } @empty {
-        <img ngSrc="empty-doc.svg" height="150" width="150" alt="error">
-        <h4 i18n="@@profile_emptyquestions">You still haven't asked anything</h4>
-      }
-      <mat-paginator
-        (page)="nextPage($event)"
-        [length]="questions.metadata.total"
-        [pageSize]="questions.metadata.per"
-        [pageIndex]="((page | async) ?? 1) - 1"
-        showFirstLastButtons
-        hidePageSize
-      ></mat-paginator>
-    } @else {
-      <mat-spinner diameter="50" class="col-span-4"></mat-spinner>
-    }
-  }
-</div>
+@defer () {
+  <app-search-questions searchType="userQuestions"></app-search-questions>
+}
