Add category filter

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,7 +18,7 @@
 
 <mat-nav-list class="!mx-auto !grid w-max grid-cols-1 sm:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5">
   @for (category of categories$ | async; track category.value) {
-    <mat-list-item class="w-min" tabindex="0">
+    <mat-list-item class="w-min" tabindex="0" (click)="searchCategory(category.value)">
       <mat-icon [fontIcon]="category.icon" matListItemIcon></mat-icon>
       {{ category.label }}
     </mat-list-item>
