--- a/src/app/components/question/question-details/question-details.component.html
+++ b/src/app/components/question/question-details/question-details.component.html
@@ -15,6 +15,9 @@
         <mat-icon [fontIcon]="Icons.Add"></mat-icon>
         Add answer
       </button>
+      <app-question-answers [question]="question"></app-question-answers>
     </div>
+  } @else {
+    <mat-spinner diameter="50" class="col-span-4"></mat-spinner>
   }
 </div>
