--- a/src/app/components/answer/answer-card/answer-card.component.html
+++ b/src/app/components/answer/answer-card/answer-card.component.html
@@ -1,2 +1,29 @@
-<!--TODO-->
-<p>{{ answer.body }}</p>
+<mat-card appearance="outlined" class="mb-4">
+  <mat-card-header>
+    <img
+      [ngSrc]="'https://picsum.photos/seed/' + answer.createdBy + '/100/'"
+      alt="Profile picture" height="100"
+      i18n-alt="@@profile_picture" mat-card-avatar
+      width="100"
+    >
+    <mat-card-title>{{ answer.createdBy }}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p class="whitespace-pre-line text-lg">{{ answer.body }}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <!-- TODO -->
+    <button mat-stroked-button>
+      <mat-icon [fontIcon]="Icons.Upvote"></mat-icon>
+      {{ answer.upvotes }}
+    </button>
+    <button mat-button>
+      <mat-icon [fontIcon]="Icons.Downvote"></mat-icon>
+      {{ answer.downvotes }}
+    </button>
+    @if (user()?.username === answer.createdBy) {
+      <button mat-button type="button" i18n="@@edit">Edit</button>
+      <button mat-button class="!text-red-700" type="button" i18n="@@delete">Delete</button>
+    }
+  </mat-card-actions>
+</mat-card>
