--- a/src/app/components/answer/delete-answer/delete-answer.component.html
+++ b/src/app/components/answer/delete-answer/delete-answer.component.html
@@ -1,7 +1,7 @@
-<h1 mat-dialog-title i18n="@@delete_answer_confirmation">Do you want to delete this answer?</h1>
+<h1 i18n="@@delete_answer_confirmation" mat-dialog-title>Do you want to delete this answer?</h1>
 <mat-dialog-content>
   <mat-dialog-actions>
-    <button mat-button [mat-dialog-close]="false" i18n="@@close">Close</button>
-    <button mat-button class="!text-red-700" [mat-dialog-close]="true" i18n="@@delete">Delete</button>
+    <button [mat-dialog-close]="false" i18n="@@close" mat-button>Close</button>
+    <button [mat-dialog-close]="true" class="!text-red-700" i18n="@@delete" mat-button>Delete</button>
   </mat-dialog-actions>
 </mat-dialog-content>
