--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -103,7 +103,7 @@
 <!-- MOBILE MENU -->
 <mat-menu #menu="matMenu">
   <ng-template matMenuContent>
-    <button mat-menu-item (click)="openAskQuestionDialog()">
+    <button (click)="openAskQuestionDialog()" mat-menu-item>
       <mat-icon [fontIcon]="Icons.Add"></mat-icon>
       <span i18n="@@new_question">Ask a question</span>
     </button>
