--- a/src/app/components/question/question-card/question-card.component.html
+++ b/src/app/components/question/question-card/question-card.component.html
@@ -1,4 +1,4 @@
-<mat-card appearance="outlined" [@slideToLeft]="animationState">
+<mat-card [@slideToLeft]="animationState" appearance="outlined">
   <mat-card-header>
     <img
       [ngSrc]="'https://picsum.photos/seed/' + question.createdBy + '/100/'"
