--- a/src/app/components/question/delete-question/delete-question.component.html
+++ b/src/app/components/question/delete-question/delete-question.component.html
@@ -1,7 +1,7 @@
 <h1 i18n="@@delete_question_confirmation" mat-dialog-title>Do you want to delete this question?</h1>
 <mat-dialog-content>
   <mat-dialog-actions>
-    <button [mat-dialog-close]="false" i18n="@@close" mat-button>Close</button>
-    <button [mat-dialog-close]="true" class="!text-red-700" i18n="@@delete" mat-button>Delete</button>
+    <button [mat-dialog-close]="false" i18n="@@close" mat-button type="button">Close</button>
+    <button [mat-dialog-close]="true" class="!text-red-700" i18n="@@delete" mat-button type="button">Delete</button>
   </mat-dialog-actions>
 </mat-dialog-content>
