--- a/src/app/components/question/question-details/question-details.component.html
+++ b/src/app/components/question/question-details/question-details.component.html
@@ -11,10 +11,12 @@
           }
         </mat-form-field>
       }
-      <button mat-flat-button type="button" i18n="@@add_answer" (click)="submit(question.id)" [disabled]="loading">
-        <mat-icon [fontIcon]="Icons.Add"></mat-icon>
-        Add answer
-      </button>
+      @if (user()) {
+        <button mat-flat-button type="button" i18n="@@add_answer" (click)="submit(question.id)" [disabled]="loading">
+          <mat-icon [fontIcon]="Icons.Add"></mat-icon>
+          Add answer
+        </button>
+      }
       <app-question-answers [question]="question"></app-question-answers>
     </div>
   } @else {
